# pdf_mcpserver

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py  confidence.py  config.py  constants.py  models.py  pdf_processor.py  query_handler.py  retrieval_handler.py
tests/: __init__.py  test_query_handler.py
